force-app/main/default/objects/Case/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>