force-app/main/default/objects/Case/fields/Case_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Response_Time__c</fullName>
    <label>Case Response Time</label>
    <type>DateTime</type>
</CustomField>