force-app/main/default/objects/Case/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Delivery</fullName>
            </value>
            <value>
                <fullName>Store Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>