force-app/main/default/objects/Case/fields/Escalation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Needed__c</fullName>
    <formula>TEXT(Priority) = &quot;High&quot;   &amp;&amp;  TEXT(Status)  &lt;&gt; &quot;Closed&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Needed</label>
    <type>Checkbox</type>
</CustomField>