force-app/main/default/objects/Case/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>smartwatch</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>