force-app/main/default/objects/Case/fields/Purchase_Channel__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Channel__c</fullName>
    <label>Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Retail Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>