force-app/main/default/objects/Case/fields/Response_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_SLA_Status__c</fullName>
    <formula>IF( DATEVALUE( Case_Response_Time__c )&lt;  TODAY()  ,&quot;Overdue&quot;, 

   IF( DATEVALUE( Case_Response_Time__c )=  TODAY()   , &quot;Due Today&quot;, &quot;On Time&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response SLA Status</label>
    <type>Text</type>
</CustomField>