force-app/main/default/objects/Case/fields/Travel_Class__c.field-meta.xml
<CustomField>
    <fullName>Travel_Class__c</fullName>
    <label>Travel Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>First Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>