force-app/main/default/objects/Case/recordTypes/Claims_Assistance.recordType-meta.xml
<RecordType>
    <fullName>Claims_Assistance</fullName>
    <active>true</active>
    <businessProcess>Claims Support</businessProcess>
    <description>Insurance claims-related issues</description>
    <label>Claims Assistance</label>
</RecordType>