force-app/main/default/objects/Case/recordTypes/Flight_Delay_Support.recordType-meta.xml
<RecordType>
    <fullName>Flight_Delay_Support</fullName>
    <active>true</active>
    <businessProcess>Delay Support Process</businessProcess>
    <label>Flight Delay Support</label>
</RecordType>