force-app/main/default/objects/Case/recordTypes/General_Chat_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>General_Chat_Inquiry</fullName>
    <active>true</active>
    <businessProcess>General Inquiry</businessProcess>
    <description>Basic customer questions</description>
    <label>General Chat Inquiry</label>
</RecordType>