force-app/main/default/objects/Case/recordTypes/Online_Product_Support.recordType-meta.xml
<RecordType>
    <fullName>Online_Product_Support</fullName>
    <active>true</active>
    <businessProcess>Online Support Process</businessProcess>
    <label>Online Product Support</label>
</RecordType>