force-app/main/default/objects/Case/recordTypes/Policy_Modification.recordType-meta.xml
<RecordType>
    <fullName>Policy_Modification</fullName>
    <active>true</active>
    <businessProcess>Policy Update</businessProcess>
    <description>Policy updates &amp; changes</description>
    <label>Policy Modification</label>
</RecordType>