force-app/main/default/objects/Case/recordTypes/Retail_Product_Support.recordType-meta.xml
<RecordType>
    <fullName>Retail_Product_Support</fullName>
    <active>true</active>
    <businessProcess>Retail Support Process</businessProcess>
    <label>Retail Product Support</label>
</RecordType>