force-app/main/default/objects/Case/recordTypes/Travel_Booking_Support.recordType-meta.xml
<RecordType>
    <fullName>Travel_Booking_Support</fullName>
    <active>true</active>
    <businessProcess>Booking Support Process</businessProcess>
    <label>Travel Booking Support</label>
</RecordType>