force-app/main/default/objects/Case/recordTypes/Travel_Refund_Support.recordType-meta.xml
<RecordType>
    <fullName>Travel_Refund_Support</fullName>
    <active>true</active>
    <businessProcess>Refund Support Process</businessProcess>
    <label>Travel Refund Support</label>
</RecordType>