force-app/main/default/objects/Case/recordTypes/Travel_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Travel_Support_Case</fullName>
    <active>true</active>
    <businessProcess>Booking Support Process</businessProcess>
    <label>Travel Support Case</label>
</RecordType>