force-app/main/default/objects/Case/recordTypes/Warranty_Service_Support.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Service_Support</fullName>
    <active>true</active>
    <businessProcess>Warranty Claims Process</businessProcess>
    <label>Warranty Service Support</label>
</RecordType>