force-app/main/default/objects/Case/validationRules/NO_OPEN_CASE_TO_NEW.validationRule-meta.xml
<ValidationRule>
    <fullName>NO_OPEN_CASE_TO_NEW</fullName>
    <active>true</active>
    <description>You cannot change the status from Open to New</description>
    <errorConditionFormula>AND(
    ISCHANGED( Status ),
    TEXT(PRIORVALUE( Status ))=&quot;Open&quot; ,
      TEXT(Status)=&quot;New&quot;
)</errorConditionFormula>
    <errorMessage>You cannot change the status from Open to New</errorMessage>
</ValidationRule>