force-app/main/default/objects/Case/listViews/Billing_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Billing_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing Queue</label>
    <queue>Billing_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>