force-app/main/default/objects/Case/listViews/Booking_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Booking_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Booking Support Queue</label>
    <queue>Booking_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>