force-app/main/default/objects/Case/listViews/Claims_Handling_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Claims_Handling_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Claims Handling Queue</label>
    <queue>Claims_Handling_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>