force-app/main/default/objects/Case/listViews/Electronics_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Electronics_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Electronics Support Queue</label>
    <queue>Electronics_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>