force-app/main/default/objects/Case/listViews/Escalation_Manager_Case.listView-meta.xml
<ListView>
    <fullName>Escalation_Manager_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Escalation Manager</label>
    <queue>Escalation_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>