force-app/main/default/objects/Case/listViews/Finance_Team_Manager_Case.listView-meta.xml
<ListView>
    <fullName>Finance_Team_Manager_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Team Manager</label>
    <queue>Finance_Team_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>