force-app/main/default/objects/Case/listViews/General_Chat_Queue_Case.listView-meta.xml
<ListView>
    <fullName>General_Chat_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General Chat Queue</label>
    <queue>General_Chat_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>