force-app/main/default/objects/Case/listViews/General_Queue_Case.listView-meta.xml
<ListView>
    <fullName>General_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General Queue</label>
    <queue>General_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>