force-app/main/default/objects/Case/listViews/Logistics_Escalation_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Logistics_Escalation_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Logistics Escalation Queue</label>
    <queue>Logistics_Escalation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>