force-app/main/default/objects/Case/listViews/Online_Sales_Support_Case.listView-meta.xml
<ListView>
    <fullName>Online_Sales_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Online Sales Support</label>
    <queue>Online_Sales_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>