force-app/main/default/objects/Case/listViews/Online_Support_Case.listView-meta.xml
<ListView>
    <fullName>Online_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Online Support Manager</label>
    <queue>Online_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>