force-app/main/default/objects/Case/listViews/Policy_Support_Team_Case.listView-meta.xml
<ListView>
    <fullName>Policy_Support_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Policy Support Team</label>
    <queue>Policy_Support_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>