force-app/main/default/objects/Case/listViews/Refund_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Refund_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Refund Queue</label>
    <queue>Refund_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>