force-app/main/default/objects/Case/listViews/Regional_Manager_Case.listView-meta.xml
<ListView>
    <fullName>Regional_Manager_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Regional Manager</label>
    <queue>Regional_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>