force-app/main/default/objects/Case/listViews/Senior_Agent_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Senior_Agent_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Senior Agent Queue</label>
    <queue>Senior_Agent_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>